# coamorphous

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: corpus_schema.yaml
data/interim/: alleso_2009.csv  alleso_2009_raw.json  knapik_2015.csv  knapik_2015_raw.json  knapik_2019.csv  knapik_2019_raw.json  lobmann_2011.csv  lobmann_2011_raw.json  lobmann_2012.csv  lobmann_2012_raw.json  lobmann_2013.csv  lobmann_2013_raw.json  pajula_2014.csv  pajula_2014_raw.json
data/processed/: coamorphous_corpus_v1.csv
docs/: README.md
notebooks/: README.md
notebooks/01_corpus_extraction/: 00_template.ipynb  extract_template.ipynb  knapik_2015.ipynb  lobmann_2011.ipynb
scripts/: fix_lobmann_2011.py
src/coamorphous/: __init__.py
src/coamorphous/corpus/: __init__.py  canonicalize.py  classify.py  merge.py  schema.py
src/coamorphous/descriptors/: __init__.py  molecular.py  pair.py
src/coamorphous/extraction/: __init__.py  enrich.py  extraction_schema.py  pubchem_lookup.py  validate.py
src/coamorphous/utils/: __init__.py  io.py
tests/: conftest.py  test_build_master_corpus.py  test_canonicalize.py  test_classify.py  test_extraction.py  test_merge.py  test_schema.py
tools/: build_master_corpus.py  fix_pajula_2014_tmdsc.py  list_all_pairs.py  update_pajula_2014_with_kilpelainen_tg.py  update_prompt.py
